Cacti CHANGELOG

0.8.6h
-bug: Stop MySQL connect messages from appearing in user interface
-bug: Allow primary keys other than "ID" from saving properly in function sql_save
-bug: Allow primary keys other than "ID" to be handled properly using the html code
-bug: Make PHP timeout more rapidly, allow more time for concurrent PHP poller processes to start
-bug: Save statistics even when the poller times out.
-bug: Only call poller_commands.php or poller_export.php if they require calling.
-bug: Incorporate a timeout to ss_fping.php so that a host that takes to long to finish at least returns data
-bug: Correct the display of custom data in data input methods to follow the proper order
-bug: Change the default behavior of ping.php to mark a host as up if either snmp or ping are successful.
-bug: Don't allow graph_export to delete your web site.
-bug: Correct issue where snmp was not returning hex data and some text data.
-bug: Prevent a never ending table lock in lib/tree.php
-bug: Correct issue where either AREA or LINEx without color were causing RRD_NL without any elements in rrdtool_graph.
-bug: Fix ordering issues with Data Input methods and Graph Creation for Custom Data
-feature: When utilizing cmd.php, don't run the script_server if it is not required for a process.
-feature: Incorporate snmpbulkwalk binary to user interface to speed snmpv2 & snmpv3 walk calls.
-feature: Added support for new 95th Percentile Variables: aggregate, aggregate_max, aggregate_sum

0.8.6g
-bug#0000351: Fix zooming capability in Safari.
-bug#0000491: Allow underscore, dash, and forward slash characters through search string validation.
-bug#0000498: Fix issue where editing data input methods damaged portions of the database.
-bug#0000502: Fix Syslog support in unix.
-bug#0000506/#0000517: Properly handle special XML characters when importing/exporting templates.
-bug#0000508: Fix issues where filter functionality would not work in preview mode.